# morningdigest

./: .env.example  .gitignore  ORCHESTRATION_README.md  demo_orchestration.py  install_deps.py  plan.md  planmode.md  pyproject.toml  requirements-minimal.txt  requirements.txt  run_basic_test.py  test_orchestration.py  test_orchestration_minimal.py
.claude/: settings.local.json
.github/workflows/: daily-digest.yml  digest.yml  morning-digest.yml  morning.yml  test-workflow.yml  test.yml
config/: agent_prompts.json  email_template.html  news_sources.json  settings.yaml
scripts/: github_setup.py  setup.py  setup_oauth.py  test_agents.py  test_system.py
src/: main.py
src/agents/: base_agent.py  calendar_intelligence_agent.py  master_coordinator_agent.py  newsletter_intelligence_agent.py  norwegian_news_agent.py  tech_intel_agent.py
src/collectors/: calendar_collector.py  gmail_collector.py  medium_collector.py  news_collector.py  weather_collector.py
src/formatters/: html_formatter.py  json_formatter.py  text_formatter.py
src/orchestration/: __init__.py  agent_coordinator.py  digest_orchestrator.py
src/utils/: auth_manager.py  config_loader.py  email_sender.py  error_handler.py  token_counter.py
